--- a/client/css/start.css
+++ b/client/css/start.css
@@ -36,10 +36,10 @@
     background-color: #f49b15;
     border-color: #f49b15;
     padding: 1rem;
-    border-radius: 3px;
+    /* border-radius: 3px; */
     color: white;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
     box-shadow: none;
     font-size: 14px;
     padding: 6px 12px;
@@ -59,7 +59,8 @@
     user-select: none;
     background-image: none;
     border: 4px solid transparent;
-    text-shadow: #f49b15 10px;
+    text-shadow: #f49b15 10px 10px 10px;
+    width: 140px;
 }
 
 #start-scan:hover{
