--- a/client/css/question.css
+++ b/client/css/question.css
@@ -20,15 +20,15 @@
     margin: 8px 0;
     box-sizing: border-box;
     border-top: grey 0.1px solid;
-    border-right:grey 0.1px solid; 
-    border-bottom:grey 0.1px solid;
+    border-right: grey 0.1px solid;
+    border-bottom: grey 0.1px solid;
     margin-top: 5%;
     width: 80%;
     height: 70px;
 }
 
-#next{
-    background-color:#f49b15 ;
+#next {
+    background-color: #f49b15;
     border-color: #f49b15;
     padding: 1rem;
     /* border-radius: 3px; */
@@ -56,31 +56,46 @@
     border: 10px solid transparent;
 }
 
-#next:hover{
-    background-color:#8b5300 ;
+#next:hover {
+    background-color: #8b5300;
 }
 
-.volgorde{
+.volgorde {
     margin-top: 70px;
 }
 
-#rij{
+#rij {
+    margin-top: 21px;
     margin-right: 20px;
-    background-color:grey;
+    background-color: grey;
     border-radius: 100%;
     color: white;
     border: rgb(202, 202, 202) solid 7px;
     box-shadow: rgb(154, 154, 154) 1px 0px 0px 0px;
-    
+    margin-bottom: 0;
 }
 
-#rij:hover{
+#rij:hover {
     margin-right: 20px;
-    background-color:rgb(59, 59, 59);
+    background-color: rgb(59, 59, 59);
     border-radius: 100%;
     color: white;
     border: rgb(202, 202, 202) solid 7px;
     box-shadow: rgb(96, 96, 96) 1px 0px 0px 0px;
     cursor: pointer;
-    
+
+}
+
+#rij1 {
+    margin-right: 20px;
+    background-color: rgb(250, 250, 250);
+    border-radius: 100%;
+    color: white;
+    border: rgb(202, 202, 202) solid 7px;
+    box-shadow: rgb(154, 154, 154) 1px 0px 0px 0px;
+
+}
+
+.volgorde {
+    margin-bottom: 0;
 }
