--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,5 +1,9 @@
 @import "navbar.css";
-
+*{
+  /* margin: 0; */
+  max-height: 100%;
+  max-width: 100%;
+}
 
 .container {
   padding: 30px 30px 30px 30x;
