--- a/client/css/home.css
+++ b/client/css/home.css
@@ -1,11 +1,17 @@
 @import "navbar.css";
+*{
+    max-width: 100%;
+    max-height: 100%;
+  box-sizing: border-box;   
 
+}
 
-.container {
-    padding: 30px 30px 30px 30x;
-    width: 80%;
+#page-landing{
     margin-left: 10%;
-    justify-content: center;
+}
+.container {
+
+margin-top: 5%;
 }
 
 .showcase {
@@ -187,16 +193,17 @@
 
 
 .container-question {
-    padding: 30px 30px 30px 30x;
-    width: 80%;
-    margin-left: 10%;
+
+    margin: auto;
     background-color: white;
     text-align: center;
-    margin-top: 10%;
-    /* border:grey solid 1px; */
-    padding: 0px 100px 0px;
-    /* box-shadow: grey 0 0 2px 0; */
+    height: 550px;
+    width: 75%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 
+}
+.question_title{ 
+ padding-top: 3%;
 }
 
 #antwoord {
