--- a/client/css/quickscan.css
+++ b/client/css/quickscan.css
@@ -1,24 +1,41 @@
 /* QUESTIONS */
+#game{
+    text-align: center;
+    height: 450px;
+    /* width: 75%; */
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
+#question{
+    font-size: 3.4em;
+    margin-bottom: 80px;
+}
+.answers{
+    display: flex;
+    flex-direction: column;
+    padding-left: 20%;
+}
 
 .choice-container {
+    text-align: left;
     display: flex;
     margin-bottom: 0.5rem;
-    width: 100%;
+    width: 80%;
     font-size: 1.8rem;
     border: 0.1rem solid rgb(86, 165, 235, 0.25);
     background-color: white;
+
   }
   
   .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(245, 168, 63, 1);
     transform: translateY(-0.1rem);
     transition: transform 150ms;
   }
   
   .choice-prefix {
     padding: 1.5rem 2.5rem;
-    background-color: #56a5eb;
+    background-color: #f49b15;
     color: white;
   }
   
@@ -27,49 +44,8 @@
     width: 100%;
   }
   
-  .correct {
-    background-color: #28a745;
-  }
-  
-  .incorrect {
-    background-color: #dc3545;
-  }
-  
-  /* HUD */
-  
-  #hud {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .hud-prefix {
-    text-align: center;
-    font-size: 2rem;
-  }
-  
-  .score-main-text {
-    text-align: center;
-  }
-  
-  #progressBar {
-    width: 20rem;
-    height: 4rem;
-    border: 0.3rem solid #56a5eb;
-    margin-top: 1.5rem;
-  }
-  
-  #progressBarFull {
-    height: 3.4rem;
-    background-color: #56a5eb;
-    width: 0%;
-  }
-  
-  .score-prefix {
-    text-align: right;
-    font-size: 2rem;
-  }
-  
-  #score {
-    text-align: right;
-  }
-  
+  #swirl {
+    position: relative;
+    margin-bottom: 0;
+    margin-left: 0;
+}
