paar knoppen naar blauw veranderd

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -44,8 +44,8 @@
 }
 
 .button {
-  background-color: #f49b15;
-  border-color: #f49b15;
+  background-color: #1C5F8F;
+  border-color: #1C5F8F;
   padding: 1rem;
   border-radius: 3px;
   color: white;
