--- a/hello/login.css
+++ b/hello/login.css
@@ -63,7 +63,7 @@ div {
 .hoofdtekst {
     /* padding-left: 62px; */
     width: 100%;
-    color: #F5A83F;
+    color: #1C5F8F;
     font-family: 'roboto';
     font-style: normal;
     font-weight: 00;
@@ -98,25 +98,25 @@ div {
     width: 500px;
     outline: none;
     border: none;
-    color: #F5A83F;
+    color: #1C5F8F;
     font-weight: bold;
 
   
 }
 .form-login .form-group:focus-within{
-    border-left: #F5A83F solid 4px;
+    border-left: #1C5F8F solid 4px;
 
 }
 
 input::placeholder{
-    color: #F5A83F;
+    color: #1C5F8F;
     font-weight: bold;
 }
 .form-login .email,
 .form-login input[type="text"]:focus ,
 .form-login input[type="password"]:focus ,
 .form-login input[type="email"]:focus {
-    border-left: #F5A83F solid 2px;
+    border-left: #1C5F8F solid 2px;
 }
 .bottomline{
     margin-top: 10px;
@@ -134,12 +134,12 @@ input::placeholder{
 .login-button{
     width: 109px;
     height: 34px;
-    background-color: #F5A83F;
+    background-color: #1C5F8F;
     color: white;
     border: none;
     box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.25);
 }
 .login-button:hover{
-    background-color: #f09618;
+    background-color: #144365;
     cursor:pointer;
 }
