--- a/client/css/start.css
+++ b/client/css/start.css
@@ -26,6 +26,28 @@
     height: 60px;
 
 }
+input::placeholder{
+    color: #1C5F8F;
+    font-weight: bold;
+} 
+.email,
+ input[type="text"]:focus ,
+ input[type="password"]:focus ,
+ input[type="email"]:focus {
+    border-left: #1C5F8F solid 2px;
+}
+.email,
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+    width: 500px;
+    outline: none;
+    border: none;
+    color: #1C5F8F;
+    font-weight: bold;
+
+  
+}
 
 #voorwaarden{
     color: #969696;
