--- a/client/css/quickscan.css
+++ b/client/css/quickscan.css
@@ -114,7 +114,7 @@ border: none;
 }
 .terug-button {
   /* margin-top: 50px; */
-  font-size: large;
+  font-size: medium;
   margin: 100px auto 10px auto;
   width: 209px;
   height: 34px;
@@ -123,3 +123,36 @@ border: none;
   border: none;
   box-shadow: 0px 4px 4px rgba(28, 95, 143, 1);
 }
+
+.gast-button {
+  /* margin-top: 50px; */
+  font-size: large;
+  margin: px auto 10px auto;
+  width: 209px;
+  height: 34px;
+  background-color: #1C5F8F;
+  color: white !important;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(28, 95, 143, 1);
+ margin-left: 0;
+
+}
+
+
+.login-button {
+  /* margin-top: 50px; */
+  font-size: large;
+  margin: 100px auto 10px auto;
+  width: 209px;
+  height: 34px;
+  background-color: #1C5F8F;
+  color: white !important;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(28, 95, 143, 1);
+  margin-right: 0;
+ border-spacing: 0;
+
+ 
+}
+
+
