--- a/client/css/quickscan.css
+++ b/client/css/quickscan.css
@@ -123,3 +123,12 @@ border: none;
   border: none;
   box-shadow: 0px 4px 4px rgba(28, 95, 143, 1);
 }
+.Quser{
+  position: absolute;
+  right: 20%;
+  top: 24%;
+  font-size: medium;
+  color: #1C5F8F;
+  text-decoration: none;
+  user-select: none;
+}
